2005-04-18  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/base64.[ch]: Added parameter 'columns' to
	base64_encode() to add optional line breaks in the output.
	Improved documentation.

2005-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: workaround a GTK+ bug to make the
	tooltips for the Back and Forward buttons appear.

2005-04-17  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c: use gimp_spin_button_new() which
	calls gtk_spin_button_set_numeric() for us. Part of a fix for bug
	#300935.

	* libgimpwidgets/gimpwidgets.c: improved the API docs for
	gimp_spin_button_new().

	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimplevelstool.c
	* plug-ins/common/screenshot.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/rcm/rcm_dialog.c
	* plug-ins/script-fu/script-fu-interface.c
	* plug-ins/winsnap/winsnap.c: use gimp_spin_button_new().

2005-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: set a busy cursor while loading a
	page. Offer drags as "text/uri-list" in addition to "_NETSCAPE_URL".

2005-04-17  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstock.c
	* themes/Default/images/Makefile.am: register a wilber icon in
	button size.

	* plug-ins/helpbrowser/gimpthrobber.c: choose a slightly larger
	icon than the configured size for toolbars.

2005-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: added actions to zoom in/out.

	* plug-ins/helpbrowser/gimpthrobberaction.[ch]: fixed handling of
	overflow menu items.

2005-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/Makefile.am
	* plug-ins/helpbrowser/gimpthrobber.[ch]
	* plug-ins/helpbrowser/gimpthrobberaction.[ch]: new files
	implementing a custom GtkToolItem and a GtkAction to use it.

	* plug-ins/helpbrowser/dialog.c: use the new widget.

2005-04-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpaction.h
	* app/widgets/gimpactiongroup.h
	* app/widgets/gimpcellrendereraccel.h