@@ -1,3 +1,7 @@
+2005-04-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/helpbrowser/dialog.c: restrict the menus to 15 items.
+
 2005-04-18  Raphaël Quinet  <raphael@gimp.org>
 
 	* plug-ins/metadata/base64.[ch]: Added parameter 'columns' to
